<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="384dp"
        android:layout_height="507dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/AC"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/MASOMENOS"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/PORCENTAJE"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/DIVISION"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/SIETE"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/OCHO"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/NUEVE"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/MULTIPLICACION"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/CUATRO"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/CINCO"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/SEIS"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/MENOS"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/UNO"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/DOS"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/TRES"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/MAS"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:text="@string/CERO"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/PUNTO"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/IGUAL"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />
</androidx.constraintlayout.widget.ConstraintLayout>